@@ -8,10 +8,10 @@ Thanks to everyone to help us with this project!
 
 project manager
 ---------------
-Dirk Schnelle (dirk.schnelle@jvoicexml.org)
+Dirk Schnelle (dirk (dot) schnelle (at) jvoicexml (dot) org)
 
 coding
 ------
-Dirk Schnelle (dirk.schnelle@jvoicexml.org)^
+Dirk Schnelle (dirk (dot) schnelle (at) jvoicexml (dot) org)
 Renato Cassaca
 David Rodriguez
